fix border and scrollbar

--- a/frontend/src/app/globals.css
+++ b/frontend/src/app/globals.css
@@ -45,6 +45,10 @@
 
   --filter: invert(0);
   --filter2: invert(1);
+
+  /*Scrollbar*/
+  --thumb_color: #b4b6ba;
+  --thumb_color_hover: #949699;
 }
 
 /* dark mode */
@@ -75,6 +79,10 @@
 
     --filter: invert(1);
     --filter2: invert(0);
+
+    /*Scrollbar*/
+    --thumb_color: #ffffff55;
+    --thumb_color_hover: #ffffff1e;
   }
 }
 :root[data-theme="dark"] {
@@ -103,6 +111,10 @@
 
   --filter: invert(1);
   --filter2: invert(0);
+
+  /*Scrollbar*/
+  --thumb_color: #ffffff55;
+  --thumb_color_hover: #ffffff1e;
 }
 
 html,
@@ -129,10 +141,53 @@ body {
 a {
   color: inherit;
   text-decoration: none;
+  cursor: pointer;
+}
+
+a:-webkit-any-link {
+  color: inherit;
+  text-decoration: none;
+  cursor: pointer;
 }
 
 @media (prefers-color-scheme: dark) {
   html {
     color-scheme: dark;
   }
+}
+
+/* scrollbar*/
+::-webkit-scrollbar {
+  width: 5px;
+}
+
+::-webkit-scrollbar-thumb {
+  background-color: var(--thumb_color);
+  border-radius: 6px;
+  z-index: var(--z-toast);
+}
+
+::-webkit-scrollbar-thumb:hover {
+  background-color: var(--thumb_color_hover);
+}
+
+::-webkit-scrollbar-track {
+  background: transparent;
+}
+
+::-moz-scrollbar {
+  width: 12px;
+}
+
+::-moz-scrollbar-thumb {
+  background-color: var(--thumb_color);
+  border-radius: 6px;
+}
+
+::-moz-scrollbar-thumb:hover {
+  background-color: var(--thumb_color_hover);
+}
+
+::-moz-scrollbar-track {
+  background-color: transparent;
 }
